<resources>
    <string name="app_name">usandomapas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="satelite">Vista Satelite</string>
    <string name="hibrido">Vista hibrida</string>
    <string name="terreno">Vista terreno</string>
    <string name="marker">Ir</string>
    <string name="normal">Normal</string>
    <string name="ninguno">Ninguno</string>
</resources>
