<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/sat"
        android:title="@string/satelite"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/hib"
        android:title="@string/hibrido"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/ter"
        android:title="@string/terreno"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/nor"
        android:title="@string/normal"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/none"
        android:title="@string/ninguno"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/irmarcador"
        android:title="@string/marker"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
</menu>
